Fixed alignment of copy button in various browsers.

--- a/src/less/forms.less
+++ b/src/less/forms.less
@@ -74,7 +74,7 @@ select[size] {
   border: 1px solid @gray-200;
   border-radius: @border-radius-base;
   transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
-  vertical-align: middle;
+  vertical-align: bottom;
   // Disabled and read-only inputs
   //
   // HTML5 says that controls under a fieldset > legend:first-child won't be
